--- a/src/components/templates/layout/index.module.scss
+++ b/src/components/templates/layout/index.module.scss
@@ -1,35 +1,40 @@
 .main-container {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
+    background-image: url('/math.jpg');
+    background-repeat: repeat;
+    background-size: contain;
 
     main {
         height: 100%;
         width: 100%;
-        background-image: url('/math.jpg');
-        background-repeat: repeat;
-        background-size: contain;
         display: flex;
         justify-content: center;
         align-items: center;
-       
+        overflow-y: auto;
 
         .container {
+        margin: auto;
+
             background-color: var(--black-alpha-75);
             padding: 24px;
             border-radius: 20px;
+            word-wrap: break-word;
         }
 
         @media only screen and (max-width: 768px) {
             .container {
-                min-width: 80%;
+                width: 80%;
             }
           }
 
           @media only screen and (min-width: 768px) {
             .container {
-                min-width: 35%;
+                width: 60%;
             }
           }
     }
