--- a/src/components/atoms/select/index.module.scss
+++ b/src/components/atoms/select/index.module.scss
@@ -7,10 +7,5 @@
     font-size: 16px;
     cursor: pointer;
     background-color: var(--white);
-}
-
-.options{
-    font-family: 'Roboto';
-    font-weight: 500;
-    font-size: 16px;
+    width: 100%;
 }
