--- a/src/styles/Rounds.module.scss
+++ b/src/styles/Rounds.module.scss
@@ -1,7 +1,7 @@
 .question-container {
     display: flex;
     justify-content: center;
-    margin-bottom: 28px;
+    margin-bottom: var(--spacing-xxxmd);
     text-align: center;
 }
 
