--- a/src/components/atoms/button/index.module.scss
+++ b/src/components/atoms/button/index.module.scss
@@ -2,15 +2,15 @@
     width: 100%;
     background-color: var(--color-primary-dark);
     color: var(--white);
-    padding: 14px 20px;
-    margin: 8px 0;
+    padding: var(--spacing-xsm) var(--spacing-xmd);
+    margin: var( --spacing-sm) var(--spacing-zero);
     border: none;
     border-radius: 4px;
     cursor: pointer;
 
-    font-family: 'Mochiy Pop P One';
-    font-weight: 300;
-    font-size: 14px;
+    font-family:  var(--font-family-mochiy);
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-sm);
 
     &:hover {
         background-color: var(--color-primary);
