--- a/src/components/atoms/input/index.module.scss
+++ b/src/components/atoms/input/index.module.scss
@@ -1,13 +1,13 @@
 .input[type=text] {
     width: 100%;
-    padding: 12px 20px;
+    padding: var(--spacing-xsm) var(--spacing-xmd);
     display: inline-block;
     border: 1px solid var(--white);
     border-radius: 4px;
     box-sizing: border-box;
-    font-family: 'Roboto';
-    font-weight: 500;
-    font-size: 16px;
+    font-family: var(--font-family-roboto);
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-xsm);
     color: var(--color-text);
 
     &:focus {
