--- a/src/components/atoms/label/index.module.scss
+++ b/src/components/atoms/label/index.module.scss
@@ -1,8 +1,8 @@
 .label {
-    font-family: 'Mochiy Pop P One';
-    font-weight: 300;
-    font-size: 20px;
+    font-family:  var(--font-family-mochiy);
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-xmd);
     color: var(--white);
     -webkit-text-stroke: 1px var(--color-primary);
-    padding-bottom: 8px;
+    padding-bottom: var(--spacing-sm);
 }
