--- a/src/components/atoms/select/index.module.scss
+++ b/src/components/atoms/select/index.module.scss
@@ -1,10 +1,10 @@
 .select {
     border: 1px solid var(--black);
     border-radius: 0.25em;
-    padding: 12px 20px;
-    font-family: Roboto;
-    font-weight: 500;
-    font-size: 16px;
+    padding: var(--spacing-xsm) var(--spacing-xmd);
+    font-family:  var(--font-family-regular);
+    font-weight: var(--font-weight-regular);
+    font-size: var(--font-size-xsm);
     cursor: pointer;
     background-color: var(--white);
     width: 100%;
