--- a/src/components/atoms/spinner/index.module.scss
+++ b/src/components/atoms/spinner/index.module.scss
@@ -10,7 +10,7 @@
     position: absolute;
     width: 64px;
     height: 64px;
-    margin: 8px;
+    margin:  var(--spacing-sm);
     border: 8px solid #fff;
     border-radius: 50%;
     animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
